--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <ul>
               <li><a href="#hero" data-after="Home">Home</a></li>
-              <li><a href="#services" data-after="Service">Services</a></li>
+              <li><a href="#skills" data-after="Skills">Skills</a></li>
               <li><a href="#projects" data-after="Projects">Projects</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -46,13 +46,24 @@
     <!-- End Hero Section  -->
 
     <!-- Service Section -->
-    <section id="services">
-      <div class="services container">
-        <div class="service-top">
-          <h1 class="section-title">Serv<span>i</span>ces</h1>
+    <section id="skills">
+      <div class="skills container">
+        <div class="skill-top">
+          <h1 class="section-title">Sk<span>i</span>lls</h1>
         </div>
-        <div class="service-bottom">
-          <div class="service-item">
+        <div class="skill-bottom">
+          <div class="skill-item">
+            <div class="icon">
+              <img
+                src="https://img.icons8.com/bubbles/100/000000/services.png"
+              />
+            </div>
+            <h2>Programming And Subjects</h2>
+            <p>
+              C, C++, Object Oriented Programming Concepts, DBMS, Data Structures
+            </p>
+          </div>
+          <div class="skill-item">
             <div class="icon">
               <img
                 src="https://img.icons8.com/bubbles/100/000000/services.png"
@@ -60,19 +71,7 @@
             </div>
             <h2>Web Development</h2>
             <p>
-              I can create website which works as you want them to. Your user experience is made very smooth 
-              and easy so that user does not feel any kind of issue.
-            </p>
-          </div>
-          <div class="service-item">
-            <div class="icon">
-              <img
-                src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
-            </div>
-            <h2>UX Design</h2>
-            <p>
-              I can create UX design which not only looks amazing but only feels easy to navigate through.
+              HTML, CSS, JavaScript, MySQL, Bootstrap, MongoDB, Express.js, Node.js, React.js, APIs
             </p>
           </div>
         </div>
