--- a/index.html
+++ b/index.html
@@ -221,19 +221,19 @@
         </div>
         <div class="social-icon">
           <div class="social-item">
-            <a href="#"
+            <a href="mailto:svishu178@gmail.com"
               ><img
                 src="img/email.png"
             /></a>
           </div>
           <div class="social-item">
-            <a href="#"
+            <a href="https://www.linkedin.com/in/vishu-singh-472a17215/"
               ><img
                 src="img/linkedin.png"
             /></a>
           </div>
           <div class="social-item">
-            <a href="#"
+            <a href="https://github.com/VishuS13"
               ><img src="img/github.png"
             /></a>
           </div>
